simplebool/parser.output
   0  $accept : %entry% $end

   1  input :
   2        | input block

   3  block : Command
   4        | block SEMI Command
   5        | block HOGE
   6        | block EOF

   7  toplevel : EOF
   8           | Command SEMI toplevel

   9  Command : Term
  10          | LCID Binder

  11  Binder : COLON Type

  12  Type : ArrowType

  13  AType : LPAREN Type RPAREN
  14        | BOOL

  15  ArrowType : AType ARROW ArrowType
  16            | AType

  17  Term : AppTerm
  18       | LAMBDA LCID DOT Term
  19       | LAMBDA LCID COLON Type DOT Term
  20       | IF Term THEN Term ELSE Term

  21  AppTerm : ATerm
  22          | AppTerm ATerm
  23          | SUCC ATerm
  24          | PRED ATerm
  25          | ISZERO ATerm

  26  ATerm : LPAREN Term RPAREN
  27        | LCID
  28        | TRUE
  29        | FALSE
  30        | INTV

  31  %entry% : '\001' toplevel
  32          | '\002' input

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . toplevel  (31)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	LCID  shift 11
	INTV  shift 12
	EOF  shift 13
	LPAREN  shift 14
	.  error

	toplevel  goto 15
	Command  goto 16
	Term  goto 17
	AppTerm  goto 18
	ATerm  goto 19


state 2
	%entry% : '\002' . input  (32)
	input : .  (1)

	.  reduce 1

	input  goto 20


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	Term : LAMBDA . LCID DOT Term  (18)
	Term : LAMBDA . LCID COLON Type DOT Term  (19)

	LCID  shift 21
	.  error


state 5
	Term : IF . Term THEN Term ELSE Term  (20)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	LCID  shift 22
	INTV  shift 12
	LPAREN  shift 14
	.  error

	Term  goto 23
	AppTerm  goto 18
	ATerm  goto 19


state 6
	ATerm : TRUE .  (28)

	.  reduce 28


state 7
	ATerm : FALSE .  (29)

	.  reduce 29


state 8
	AppTerm : SUCC . ATerm  (23)

	TRUE  shift 6
	FALSE  shift 7
	LCID  shift 22
	INTV  shift 12
	LPAREN  shift 14
	.  error

	ATerm  goto 24


state 9
	AppTerm : PRED . ATerm  (24)

	TRUE  shift 6
	FALSE  shift 7
	LCID  shift 22
	INTV  shift 12
	LPAREN  shift 14
	.  error

	ATerm  goto 25


state 10
	AppTerm : ISZERO . ATerm  (25)

	TRUE  shift 6
	FALSE  shift 7
	LCID  shift 22
	INTV  shift 12
	LPAREN  shift 14
	.  error

	ATerm  goto 26


state 11
	Command : LCID . Binder  (10)
	ATerm : LCID .  (27)

	COLON  shift 27
	$end  reduce 27
	LAMBDA  reduce 27
	IF  reduce 27
	TRUE  reduce 27
	FALSE  reduce 27
	SUCC  reduce 27
	PRED  reduce 27
	ISZERO  reduce 27
	LCID  reduce 27
	INTV  reduce 27
	EOF  reduce 27
	LPAREN  reduce 27
	SEMI  reduce 27
	HOGE  reduce 27

	Binder  goto 28


state 12
	ATerm : INTV .  (30)

	.  reduce 30


state 13
	toplevel : EOF .  (7)

	.  reduce 7


state 14
	ATerm : LPAREN . Term RPAREN  (26)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	LCID  shift 22
	INTV  shift 12
	LPAREN  shift 14
	.  error

	Term  goto 29
	AppTerm  goto 18
	ATerm  goto 19


state 15
	%entry% : '\001' toplevel .  (31)

	.  reduce 31


state 16
	toplevel : Command . SEMI toplevel  (8)

	SEMI  shift 30
	.  error


state 17
	Command : Term .  (9)

	.  reduce 9


18: shift/reduce conflict (shift 6, reduce 17) on TRUE
18: shift/reduce conflict (shift 7, reduce 17) on FALSE
18: shift/reduce conflict (shift 22, reduce 17) on LCID
18: shift/reduce conflict (shift 12, reduce 17) on INTV
18: shift/reduce conflict (shift 14, reduce 17) on LPAREN
state 18
	Term : AppTerm .  (17)
	AppTerm : AppTerm . ATerm  (22)

	TRUE  shift 6
	FALSE  shift 7
	LCID  shift 22
	INTV  shift 12
	LPAREN  shift 14
	$end  reduce 17
	LAMBDA  reduce 17
	IF  reduce 17
	THEN  reduce 17
	ELSE  reduce 17
	SUCC  reduce 17
	PRED  reduce 17
	ISZERO  reduce 17
	EOF  reduce 17
	RPAREN  reduce 17
	SEMI  reduce 17
	HOGE  reduce 17

	ATerm  goto 31


state 19
	AppTerm : ATerm .  (21)

	.  reduce 21


state 20
	input : input . block  (2)
	%entry% : '\002' input .  (32)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	LCID  shift 11
	INTV  shift 12
	LPAREN  shift 14
	$end  reduce 32

	block  goto 32
	Command  goto 33
	Term  goto 17
	AppTerm  goto 18
	ATerm  goto 19


state 21
	Term : LAMBDA LCID . DOT Term  (18)
	Term : LAMBDA LCID . COLON Type DOT Term  (19)

	COLON  shift 34
	DOT  shift 35
	.  error


state 22
	ATerm : LCID .  (27)

	.  reduce 27


state 23
	Term : IF Term . THEN Term ELSE Term  (20)

	THEN  shift 36
	.  error


state 24
	AppTerm : SUCC ATerm .  (23)

	.  reduce 23


state 25
	AppTerm : PRED ATerm .  (24)

	.  reduce 24


state 26
	AppTerm : ISZERO ATerm .  (25)

	.  reduce 25


state 27
	Binder : COLON . Type  (11)

	BOOL  shift 37
	LPAREN  shift 38
	.  error

	Type  goto 39
	ArrowType  goto 40
	AType  goto 41


state 28
	Command : LCID Binder .  (10)

	.  reduce 10


state 29
	ATerm : LPAREN Term . RPAREN  (26)

	RPAREN  shift 42
	.  error


state 30
	toplevel : Command SEMI . toplevel  (8)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	LCID  shift 11
	INTV  shift 12
	EOF  shift 13
	LPAREN  shift 14
	.  error

	toplevel  goto 43
	Command  goto 16
	Term  goto 17
	AppTerm  goto 18
	ATerm  goto 19


state 31
	AppTerm : AppTerm ATerm .  (22)

	.  reduce 22


state 32
	input : input block .  (2)
	block : block . SEMI Command  (4)
	block : block . HOGE  (5)
	block : block . EOF  (6)

	EOF  shift 44
	SEMI  shift 45
	HOGE  shift 46
	$end  reduce 2
	LAMBDA  reduce 2
	IF  reduce 2
	TRUE  reduce 2
	FALSE  reduce 2
	SUCC  reduce 2
	PRED  reduce 2
	ISZERO  reduce 2
	LCID  reduce 2
	INTV  reduce 2
	LPAREN  reduce 2


state 33
	block : Command .  (3)

	.  reduce 3


state 34
	Term : LAMBDA LCID COLON . Type DOT Term  (19)

	BOOL  shift 37
	LPAREN  shift 38
	.  error

	Type  goto 47
	ArrowType  goto 40
	AType  goto 41


state 35
	Term : LAMBDA LCID DOT . Term  (18)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	LCID  shift 22
	INTV  shift 12
	LPAREN  shift 14
	.  error

	Term  goto 48
	AppTerm  goto 18
	ATerm  goto 19


state 36
	Term : IF Term THEN . Term ELSE Term  (20)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	LCID  shift 22
	INTV  shift 12
	LPAREN  shift 14
	.  error

	Term  goto 49
	AppTerm  goto 18
	ATerm  goto 19


state 37
	AType : BOOL .  (14)

	.  reduce 14


state 38
	AType : LPAREN . Type RPAREN  (13)

	BOOL  shift 37
	LPAREN  shift 38
	.  error

	Type  goto 50
	ArrowType  goto 40
	AType  goto 41


state 39
	Binder : COLON Type .  (11)

	.  reduce 11


state 40
	Type : ArrowType .  (12)

	.  reduce 12


state 41
	ArrowType : AType . ARROW ArrowType  (15)
	ArrowType : AType .  (16)

	ARROW  shift 51
	$end  reduce 16
	LAMBDA  reduce 16
	IF  reduce 16
	TRUE  reduce 16
	FALSE  reduce 16
	SUCC  reduce 16
	PRED  reduce 16
	ISZERO  reduce 16
	LCID  reduce 16
	INTV  reduce 16
	DOT  reduce 16
	EOF  reduce 16
	LPAREN  reduce 16
	RPAREN  reduce 16
	SEMI  reduce 16
	HOGE  reduce 16


state 42
	ATerm : LPAREN Term RPAREN .  (26)

	.  reduce 26


state 43
	toplevel : Command SEMI toplevel .  (8)

	.  reduce 8


state 44
	block : block EOF .  (6)

	.  reduce 6


state 45
	block : block SEMI . Command  (4)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	LCID  shift 11
	INTV  shift 12
	LPAREN  shift 14
	.  error

	Command  goto 52
	Term  goto 17
	AppTerm  goto 18
	ATerm  goto 19


state 46
	block : block HOGE .  (5)

	.  reduce 5


state 47
	Term : LAMBDA LCID COLON Type . DOT Term  (19)

	DOT  shift 53
	.  error


state 48
	Term : LAMBDA LCID DOT Term .  (18)

	.  reduce 18


state 49
	Term : IF Term THEN Term . ELSE Term  (20)

	ELSE  shift 54
	.  error


state 50
	AType : LPAREN Type . RPAREN  (13)

	RPAREN  shift 55
	.  error


state 51
	ArrowType : AType ARROW . ArrowType  (15)

	BOOL  shift 37
	LPAREN  shift 38
	.  error

	ArrowType  goto 56
	AType  goto 41


state 52
	block : block SEMI Command .  (4)

	.  reduce 4


state 53
	Term : LAMBDA LCID COLON Type DOT . Term  (19)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	LCID  shift 22
	INTV  shift 12
	LPAREN  shift 14
	.  error

	Term  goto 57
	AppTerm  goto 18
	ATerm  goto 19


state 54
	Term : IF Term THEN Term ELSE . Term  (20)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	LCID  shift 22
	INTV  shift 12
	LPAREN  shift 14
	.  error

	Term  goto 58
	AppTerm  goto 18
	ATerm  goto 19


state 55
	AType : LPAREN Type RPAREN .  (13)

	.  reduce 13


state 56
	ArrowType : AType ARROW ArrowType .  (15)

	.  reduce 15


state 57
	Term : LAMBDA LCID COLON Type DOT Term .  (19)

	.  reduce 19


state 58
	Term : IF Term THEN Term ELSE Term .  (20)

	.  reduce 20


State 18 contains 5 shift/reduce conflicts.


59 terminals, 13 nonterminals
33 grammar rules, 59 states
